infra/k8s/be-story-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: story-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: story
  template:
    metadata:
      labels:
        app: story
    spec:
      containers:
        - name: story
          image: maxefi/story
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 700Mi
              cpu: 400m
            limits:
              memory: 700Mi
              cpu: 400m
---
apiVersion: v1
kind: Service
metadata:
  name: story-srv
spec:
  selector:
    app: story
  ports:
    - name: story
      protocol: TCP
      port: 3000
      targetPort: 3000
