infra/k8s/blogpost-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogpost-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blogpost
  template:
    metadata:
      labels:
        app: blogpost
    spec:
      containers:
        - name: blogpost
          image: maxefi/blogpost
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 500Mi
              cpu: 500m
            limits:
              memory: 500Mi
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: blogpost-srv
spec:
  selector:
    app: blogpost
  ports:
    - name: blogpost
      protocol: TCP
      port: 3000
      targetPort: 3000
