infra/k8s/company-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: company-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: company
  template:
    metadata:
      labels:
        app: company
    spec:
      containers:
        - name: company
          image: maxefi/company
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 700Mi
              cpu: 100m
            limits:
              memory: 700Mi
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: company-srv
spec:
  selector:
    app: company
  ports:
    - name: company
      protocol: TCP
      port: 3000
      targetPort: 3000
