infra/k8s/fe-marketing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-marketing-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-marketing
  template:
    metadata:
      labels:
        app: fe-marketing
    spec:
      containers:
        - name: fe-marketing
          image: maxefi/fe-marketing
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: fe-marketing-srv
spec:
  type: LoadBalancer
  selector:
    app: fe-marketing
  ports:
    - name: fe-marketing
      protocol: TCP
      port: 8081
      targetPort: 8081
