infra/k8s/group-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group
  template:
    metadata:
      labels:
        app: group
    spec:
      containers:
        - name: group
          image: maxefi/group
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 500Mi
              cpu: 500m
            limits:
              memory: 500Mi
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: group-srv
spec:
  selector:
    app: group
  ports:
    - name: group
      protocol: TCP
      port: 3000
      targetPort: 3000
