infra/k8s/newsitem-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsitem-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newsitem
  template:
    metadata:
      labels:
        app: newsitem
    spec:
      containers:
        - name: newsitem
          image: maxefi/newsitem
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 500Mi
              cpu: 500m
            limits:
              memory: 500Mi
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: newsitem-srv
spec:
  selector:
    app: newsitem
  ports:
    - name: newsitem
      protocol: TCP
      port: 3000
      targetPort: 3000
