infra/k8s/newsitem-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsitem-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newsitem-redis
  template:
    metadata:
      labels:
        app: newsitem-redis
    spec:
      containers:
        - name: newsitem-redis
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: newsitem-redis-srv
spec:
  selector:
    app: newsitem-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
