infra/k8s/profile-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
        - name: profile
          image: maxefi/profile
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 500Mi
              cpu: 200m
            limits:
              memory: 500Mi
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: profile-srv
spec:
  selector:
    app: profile
  ports:
    - name: profile
      protocol: TCP
      port: 3000
      targetPort: 3000
