infra/k8s/team-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: team
  template:
    metadata:
      labels:
        app: team
    spec:
      containers:
        - name: team
          image: maxefi/team
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 500Mi
              cpu: 200m
            limits:
              memory: 500Mi
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: team-srv
spec:
  selector:
    app: team
  ports:
    - name: team
      protocol: TCP
      port: 3000
      targetPort: 3000
